## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added

** Changed

** Fixed

** Removed

* 1.3 - 2019-04-22
** Added
Added port to Knight-Native
Ported 24/24 working tests for AMD64
Added support for CONSTANT to leverage sizeof(type)

** Changed
Added basic verification of the compiled program (kaem) to test25
Added basic verification of the compiled program (Slow_Lisp) to test26
Updated from mescc-tools from 0.6.0 to 0.6.1 (To gain support for --64)
Changed test26 to adust behavior according to struct size

** Fixed
Corrected Global char* to behave correctly when given a static string
Ensured pointers match register size

** Removed
Removed need to hand calculate struct sizes

* 1.2 - 2019-04-14
** Added
Added 24/24 working tests for armv7l
Port to ARMv7l and ARMv6l both work

** Changed
ELF-code segment now writable for ARMv7l without debug
Updated from mescc-tools from 0.5.2 to 0.6 (with changes in checksums due to alternate null padding)

** Fixed
Fixed unsigned division in ARMv7l port
Fixed non-uniform behavior across locales and *BSDs
Fixed broken stack in ARMv7l thanks to dddddd

** Removed

* 1.1 - 2019-03-09
** Added
Added support for \f, \v and \e
Added refresh to bootstrap.sh to build seed from cc_x86.s
Added missing license headers
Added support for ~expressions
Added prototype for Slow_Lisp build test
Added Custom type for mes.h
Added support for octal and binary numbers
Added support for \0
Added support for GET_MACHINE_FLAGS in tests
Added --architecture flag
Added 24/24 working tests for knight-posix
Added working HEAP/malloc to knight-posix

** Changed
Converted M2-Planet to use GNU style error message