@@ -18,6 +18,8 @@
 ** Added
 
 ** Changed
+Tweaked cc_types.c to better match amd64 assembly
+Replaced out with output_list in cc_core.c
 
 ** Fixed
 
